# gemini-video-intelligence

./: .gitignore  README.md  config.yaml  pyproject.toml
notebooks/: 00_eda_and_labelling.ipynb  01_video_preprocessing.ipynb  02_object_detection.ipynb  04_scene_understanding.ipynb  05_scene_understanding_evaluation.ipynb
results/: detection_evaluation_results.json  ground_truth.json  ground_truth_converted.json  metadata.csv  preprocessing_config.csv  results.json  sequence_evaluation_results.json  sequences.json  video_metadata.csv
scripts/: prereq.sh
video_intelligence/: config.py  pipeline.py
video_intelligence/evaluation/: convert_ground_truth.py  detections.py  sequences.py
video_intelligence/export/: bq.py
video_intelligence/preprocessing/: preprocessor.py
video_intelligence/processing/: detections.py  prompts.py  sequences.py  types.py
video_intelligence/utils/: ffmpeg.py  io.py  llm.py  ocv.py
